--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script>
             function onSubmit(token) {
                 console.log("token: " + token);
+                document.getElementById("demo-form").submit();
             }
         </script>
     </head>
